# specl

./: .gitignore  .luacov  .travis.yml  .x-update-copyright  AUTHORS  AUTHORS.md  ChangeLog  GNUmakefile  LICENSE  LICENSE.md  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  THANKS  TODO.yaml  _config.yml  aclocal.m4  bootstrap  bootstrap.conf  config.h  config.h.in  config.status  configure  configure.ac  index.html  index.md  local.mk  params.json  rockspec.conf  rockspecs.lua  specl  specl-1-2.rockspec  specl-10-1.rockspec  specl-11-1.rockspec  specl-12-1.rockspec  specl-13-1.rockspec  (+26 more)
.github/workflows/: spec.yml
_layouts/: default.html
build-aux/: .gitignore  config.ld.in  install-sh  larch  luarocks.mk  mail  missing  mkrockspecs  mkrockspecs.lua  release.mk  rockspec-template.lua  rockspecs.mk  sanity-cfg.mk  specl.mk  speclc.in
doc/: config.ld.in  index.html  specl.1  specl.md
doc/modules/: specl.badargs.html  specl.inprocess.html  specl.matchers.html  specl.shell.html
docs/: RELEASE-NOTES-1  RELEASE-NOTES-2  RELEASE-NOTES-3  RELEASE-NOTES-4  specl.1  specl.1.in  specl.md
lib/: main.lua  specl.in  specl.lua
lib/larch/: from.lua
lib/specl/: badargs.lua  color.lua  compat.lua  expect.lua  inprocess.lua  loader.lua  main.lua  matchers.lua  optparse.lua  runner.lua  sandbox.lua  shell.lua  std.lua  util.lua  version-git.lua  version.lua  version.lua.in
lib/specl/formatter/: progress.lua  report.lua  tap.lua
spec/: badargs_spec.yaml  custom_formatters_spec.yaml  environment_spec.yaml  inprocess_spec.yaml  loader_spec.yaml  matchers_spec.yaml  runner_spec.yaml  shell_spec.yaml  should_spec.yaml  spec_helper.lua  specl_spec.yaml  util_spec.yaml
spec/formatter/: progress_spec.yaml  report_spec.yaml  spec_helper.lua
specl/: .gitignore  color.lua  matchers.lua  optparse.lua  shell.lua  specl.in  specl.lua  specl.mk  std.lua  util.lua  version.lua  version.lua.in
specl-release-v2/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap.conf  configure  configure.ac  libtool  luarocks-config.lua  specl-2-1.rockspec  specl-git-1.rockspec
specl-release-v2/specs/: matchers_spec.yaml
specl-release-v2/src/: .gitignore  specl.in  version.lua.in
specl/formatter/: progress.lua  report.lua  tap.lua
specs/: .gitignore  badargs_spec.yaml  custom_formatters_spec.yaml  environment_spec.yaml  formatters_spec.yaml  inprocess_spec.yaml  loader_spec.yaml  matchers_spec.yaml  optparse_spec.yaml  runner_spec.yaml  shell_spec.yaml  should_spec.yaml  spec_helper.lua  specl_spec.lua  specl_spec.yaml  speclc_spec.yaml  specs.mk  util_spec.yaml
specs/formatter/: progress_spec.yaml  report_spec.yaml  spec_helper.lua
src/: matchers.lua  specl.in  specl.lua  specl.mk  src.mk  version.lua.in
stylesheets/: styles.css
yaml/: lyaml.c  yaml.mk
